--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ ENV/
 # Environment variables
 .env
 .env.local
-
+.env.backup
 # IDE
 .vscode/
 .idea/
@@ -56,3 +56,5 @@ Thumbs.db
 
 #firebase
 firebase-service-account.json
+
+
